# horizon-backup

./: .clang-tidy  .clang-tidy-temp  .gitignore  CMakeLists.txt  README.md  build.py
docs/styleguide/: cpp.md
horizon/assets/hlsl/: compact_index_buffer.comp.hlsl  decal.frag.hlsl  decal.gfx.hlsl  decal.vert.hlsl  geometry.frag.hlsl  geometry.gfx.hlsl  geometry.vert.hlsl  gpu_mesh_culling.comp.hlsl  gpu_triangle_culling.comp.hlsl  material_classification.comp.hlsl  post_process.comp.hlsl  shading.comp.hlsl  shadow_map.frag.hlsl  shadow_map.gfx.hlsl  shadow_map.vert.hlsl  ssao.comp.hlsl  ssao_blur.comp.hlsl  ssr.comp.hlsl  taa.comp.hlsl
horizon/assets/temp/: decal.gfx.hlsl  shadow_map.gfx.hlsl  ssr.comp.hlsl
horizon/runtime/: CMakeLists.txt
horizon/runtime/core/container/: container.h  tree.h
horizon/runtime/core/encryption/: md5.cpp  md5.h
horizon/runtime/core/io/: file_system.cpp  file_system.h  read.h  write.h
horizon/runtime/core/log/: log.cpp  log.h
horizon/runtime/core/math/: common.h  hmath.h
horizon/runtime/interface/: horizon_config.h  horizon_runtime.cpp  horizon_runtime.h
horizon/samples/: CMakeLists.txt
horizon/samples/app1/: CMakeLists.txt  geometry.cpp  horizon_pipeline.cpp  horizon_pipeline.h  post_process.cpp  scene.cpp  shading.cpp
horizon/samples/horizon_pipeline/: antialiasing.cpp  config.h  decal.cpp  geometry.cpp  horizon_pipeline.cpp  post_process.cpp  scene.cpp  shading.cpp  shadow.cpp  ssao.cpp
horizon/tools/HSLCompiler/: ForgeShadingLanguage.md
horizon/unit_tests/: config.h  shader_compiler.cpp  shader_compiling_test.cpp
(+129 files in other folders)
